# AutoASPICE

./: .gitignore  README.md
agents/sotif/: sotif-analyst.yaml
backend/: main.py  pipeline.py  pyproject.toml  requirements.txt
backend/agent_engine/: agent_router.py  agent_runtime.py  manifest.py  output_stream.py  skill_loader.py  step_checkpoint.py
backend/audit/: audit_logger.py
backend/llm/: __init__.py  base.py  factory.py
backend/llm/providers/: anthropic.py  custom.py  deepseek.py  google.py  openai.py
backend/project_store/: node_state.py  project_manager.py
backend/routers/: agent.py  audit.py  file.py  pipeline.py  project.py  routing.py  websocket.py
backend/sdk_adapter/: sdk_client.py  yaml_converter.py
backend/shared/: __init__.py  models.py  state.py
backend/vector_store/: __init__.py  chunker.py  embedding.py  vector_db.py
client/: electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json
docs/: DESIGN_DECISIONS.md  DEVELOPMENT_STATUS.md
manifest/: build_manifest.py  preinstall.json
scripts/: launch.sh  setup.sh  sync_agents.py
skills/adas/: automated-parking-004.yaml  automated-parking-008.yaml  automated-parking-009.yaml  automated-parking-012.yaml  automated-parking-024.yaml  collision-avoidance-003.yaml  collision-avoidance-015.yaml  collision-avoidance-019.yaml  collision-avoidance-022.yaml  collision-avoidance-023.yaml  lane-keeping-016.yaml  lane-keeping-020.yaml  object-detection-001.yaml  object-detection-016.yaml  object-detection-017.yaml  object-detection-020.yaml  object-detection-021.yaml  (+14 more)
(+153 files in other folders)
